# LearnCMake

./: .gitignore  CMakeLists.txt  README.md  config.hpp.in  main.cpp
MathFunctions/: CMakeLists.txt  MathFunctions.cpp  MathFunctions.hpp  mysqrt.cpp  mysqrt.hpp
cmake/: utilities.cmake
docs/: step1.md  step2.md
step1/: CMakeLists.txt  README.md  config.hpp.in  main.cpp
step1_build_and_run/: CMakeLists.txt  README.md  config.hpp.in  main.cpp  note1.md
